<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/imitateTextToBeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/header_margin"
        android:layout_marginBottom="@dimen/header_margin"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/imitateEditTextUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_something" />

    <Button
        android:id="@+id/imitateChangeTextBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_text"
      />

    <Button
        android:id="@+id/imitateActivityTextChBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/open_activity_and_change_text"
      />
</LinearLayout>